# firstgame

./: .gitmodules  CMakeLists.txt  imgui.ini
assets/GLSL/: texture_and_color.glsl
firstgame/game/: color.hpp  game_layer.cpp  game_layer.hpp  level.cpp  level.hpp  particle_system.cpp  particle_system.hpp  player.cpp  player.hpp  random.cpp  random.hpp
firstgame/main/: CMakeLists.txt  main.cpp
firstgame/stackoverflow/: CMakeLists.txt  emplace_back.cpp
